@@ -50,6 +50,7 @@ import(grid)
 import(lubridate)
 import(methods)
 importFrom("circlize", colorRamp2, rand_color)
+importFrom("grDevices", "as.raster", "png", "dev.off")
 importFrom("grDevices", "col2rgb", "rgb", "dev.size", "pdf.options")
 importFrom("utils", "getFromNamespace", "packageDescription")
 importFrom(ComplexHeatmap, adjust_dend_by_x, Legend)
